Home Page Edits & About Page

--- a/index.html
+++ b/index.html
@@ -28,5 +28,50 @@
     <h2 class="home-click__about">About</h2>
     </div>
     </div>
+
+    <div class="cards">
+        <div class="card">
+            <img class="card__artwork" src="img/bland castles.png">
+            <div class="card__details">
+                <p class="card__title">Bland Castles</p>
+                <p class="card__desc">Peter & Paul</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card__artwork" src="img/underbug.png">
+            <div class="card__details">
+                <p class="card__title">Underbug</p>
+                <p class="card__desc">Twice Shy</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card__artwork" src="img/spring.png">
+            <div class="card__details">
+                <p class="card__title">113 Spring</p>
+                <p class="card__desc">FIELD.IO</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card__artwork" src="img/source.dev.png">
+            <div class="card__details">
+                <p class="card__title">Source.dev</p>
+                <p class="card__desc">Studio Mast</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card__artwork" src="img/spa.png">
+            <div class="card__details">
+                <p class="card__title">SPA</p>
+                <p class="card__desc">OB Studio</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card__artwork" src="img/football.png">
+            <div class="card__details">
+                <p class="card__title">Football Manager</p>
+                <p class="card__desc">Nomad</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
