About Page Edits

--- a/about.html
+++ b/about.html
@@ -22,6 +22,20 @@
         The result is a highly polished collection that consistently inspires and informs.
         </p>
         </div>
+        <div class="about__desc2">
+        <h2>Submissions</h2>
+        <p>Submit@visuelle.co.uk</p>
+        <br>
+        <h2>Image requirements</h2>
+        <p>2000 x 1333 px any motion to be supplied 1920 x 1080 px</p>
+            <div class="about__links">
+            <p>Instagram</p>
+            <p>Threads</p>
+            <p>Pintrest</p>
+            <p>YouTube</p>
+            <p>Vimeo</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
