About Page edits

--- a/about.html
+++ b/about.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home | Visuelle</title>
+    <title>About | Visuelle</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="home">
+    <h1 class="home-wordmark">visuelle.</h1>
+
+    <ul class="home-nav">
+        <li>All</li>
+        <li>Digital</li>
+        <li>Graphic Design</li>
+        <li>Illustration</li>
+        <li>Motion</li>
+        <li>Photography</li>
+        <li>Podcast</li>
+        <li>Typography</li>
+    </ul>
+
+    <div class="home-click">
+    <h2 class="home-click__search">Search</h2>
+    <h2 class="home-click__about">About</h2>
+    </div>
+    </div>
+
     <div class="about">
         <div class="about__desc">
         <p>
