About Page Edits

--- a/about.html
+++ b/about.html
@@ -31,29 +31,27 @@
 
     <div class="about">
         <div class="about__desc">
-        <p>
-        Graphic Design and everything in between.
+        <h2>Graphic Design and everything in between.</h2>
         <br>
-        Curated by David Bennett, Creative Director at opx.studio↗. 
-        David's personal work can be viewed at this-studio.co.uk↗.
-
-        In a world overflowing with visual content, Visuelle was created in 2007, stands out for its clarity, curation, and quality. Whether you're a seasoned designer or a student just getting started, it's a valuable resource for anyone who appreciates the art of visual communication. What truly sets Visuelle apart is its editorial philosophy: <em>“if it's great, it goes on.”</em> This simple but deliberate approach ensures that only top-tier creative projects make it onto the site. Each post is hand-selected from a wide range of leading studios and individual designers.
+        <p>Curated by David Bennett, Creative Director at <a href="#!">opx.studio</a>↗️.</p>
+        <p>David's personal work can be viewed at <a href="#!">this-studio.co.uk</a>↗️.</p>
         <br>
-        The result is a highly polished collection that consistently inspires and informs.
-        </p>
+        <p>In a world overflowing with visual content, Visuelle was created in 2007, stands out for its clarity, curation, and quality. Whether you're a seasoned designer or a student just getting started, it's a valuable resource for anyone who appreciates the art of visual communication. What truly sets Visuelle apart is its editorial philosophy: <em>“if it's great, it goes on.”</em> This simple but deliberate approach ensures that only top-tier creative projects make it onto the site. Each post is hand-selected from a wide range of leading studios and individual designers.</p>
+        <br>
+        <p>The result is a highly polished collection that consistently inspires and informs.</p>
         </div>
         <div class="about__desc2">
         <h2>Submissions</h2>
-        <p>Submit@visuelle.co.uk</p>
+        <p> <a href="#!">Submit@visuelle.co.uk</a> </p>
         <br>
         <h2>Image requirements</h2>
-        <p>2000 x 1333 px any motion to be supplied 1920 x 1080 px</p>
+        <p>2000 x 1333 px any motion to be supplied 1920 x 1080 px</p> <br>
             <div class="about__links">
-            <p>Instagram</p>
-            <p>Threads</p>
-            <p>Pintrest</p>
-            <p>YouTube</p>
-            <p>Vimeo</p>
+            <p> <a href="#!">Instagram</a> </p>
+            <p> <a href="#!">Threads</a> </p>
+            <p> <a href="#!">Pintrest</a> </p>
+            <p> <a href="#!">YouTube</a> </p>
+            <p> <a href="#!">Vimeo</a> </p>
             </div>
         </div>
     </div>
