Card Page Edits

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="home">
-    <h1 class="home-wordmark">visuelle.</h1>
+    <h1 class="home-wordmark"><a href="index.html">visuelle.</a></h1>
 
     <ul class="home-nav">
         <li>All</li>
@@ -25,7 +25,7 @@
 
     <div class="home-click">
     <h2 class="home-click__search">Search</h2>
-    <h2 class="home-click__about">About</h2>
+    <h2 class="home-click__about"><a href="about.html">About</a></h2>
     </div>
     </div>
 
