--- a/card.html
+++ b/card.html
@@ -4,10 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home | Visuelle</title>
+    <title>Card | Visuelle</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+     <div class="home">
+    <h1 class="home-wordmark"><a href="index.html">visuelle.</a></h1>
+
+    <ul class="home-nav">
+        <li>All</li>
+        <li>Digital</li>
+        <li>Graphic Design</li>
+        <li>Illustration</li>
+        <li>Motion</li>
+        <li>Photography</li>
+        <li>Podcast</li>
+        <li>Typography</li>
+    </ul>
+
+    <div class="home-click">
+    <h2 class="home-click__search">Search</h2>
+    <h2 class="home-click__about"><a href="about.html">About</a></h2>
+    </div>
+    </div>
+
+    <div class="card__headings">
+        <div class="card__heading">
+            <p>Bland Castles</p>
+            <p>Peter & Paul</p>
+        </div>
+        <div class="card__heading">
+            <p>Date</p>
+            <p>2.12.25</p>
+        </div>
+    </div>
+
+    <div class="card__desc">
+    <img src="img/bland castles big.png">
+    <div class="card__flexright">
+        <div class="card__desc-text">
+        <p>
+        Humanise - Bland Castles sees Peter & Paul translate Thomas Heatherwick's call for more human-centred architecture into a playful, public-facing intervention. Rather than relying on reports or rhetoric, the studio staged a quietly subversive moment on Morecambe Bay: 16 oversized sand “tower blocks,” each standing two metres tall and crafted with Sand In Your Eye.
+        </p>
+        <p>
+        The installation cleverly mimics the anonymity of contemporary development, complete with stripped-back branding, flags, deckchairs and a deadpan catalogue, creating a visual language that's both familiar and gently satirical. By shifting the conversation into an everyday coastal setting, the work invites people to pause, look again and question why so much of our built environment feels disconnected from human experience. It's a simple, precise reminder that public engagement can be as tactile and immediate as a sandcastle.
+        </p>
+        </div>
+        <div class="button__hover">
+            <p>
+            <a href="https://www.peterandpaul.co.uk/projects/humanise"> View project</a>
+            </p>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
