--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="home">
-    <h1 class="home-wordmark">visuelle.</h1>
+    <h1 class="home-wordmark"><a href="index.html">visuelle.</a></h1>
 
     <ul class="home-nav">
         <li>All</li>
@@ -25,7 +25,7 @@
 
     <div class="home-click">
     <h2 class="home-click__search">Search</h2>
-    <h2 class="home-click__about">About</h2>
+    <h2 class="home-click__about"><a href="about.html">About</a></h2>
     </div>
     </div>
 
@@ -33,8 +33,8 @@
         <div class="card">
             <img class="card__artwork" src="img/bland castles.png">
             <div class="card__details">
-                <p class="card__title">Bland Castles</p>
-                <p class="card__desc">Peter & Paul</p>
+                <p class="card__title"><a href="card.html">Bland Castles</a></p>
+                <p class="card__desc"><a href="card.html">Peter & Paul</a></p>
             </div>
         </div>
         <div class="card">
