--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
 
     <div class="cards">
         <div class="card">
-            <img class="card__artwork" src="img/bland castles.png">
+            <img class="card__artwork" src="img/bland castles.png" alt="bland castles logo">
             <div class="card__details">
                 <p class="card__title"><a href="card.html">Bland Castles</a></p>
                 <p class="card__desc"><a href="card.html">Peter & Paul</a></p>
             </div>
         </div>
         <div class="card">
-            <img class="card__artwork" src="img/underbug.png">
+            <img class="card__artwork" src="img/underbug.png" alt="underbug logo">
             <div class="card__details">
                 <p class="card__title">Underbug</p>
                 <p class="card__desc">Twice Shy</p>
             </div>
         </div>
         <div class="card">
-            <img class="card__artwork" src="img/spring.png">
+            <img class="card__artwork" src="img/spring.png" alt="113 spring logo">
             <div class="card__details">
                 <p class="card__title">113 Spring</p>
                 <p class="card__desc">FIELD.IO</p>
             </div>
         </div>
         <div class="card">
-            <img class="card__artwork" src="img/source.dev.png">
+            <img class="card__artwork" src="img/source.dev.png" alt="source.dev logo">
             <div class="card__details">
                 <p class="card__title">Source.dev</p>
                 <p class="card__desc">Studio Mast</p>
             </div>
         </div>
         <div class="card">
-            <img class="card__artwork" src="img/spa.png">
+            <img class="card__artwork" src="img/spa.png" alt="spa logo">
             <div class="card__details">
                 <p class="card__title">SPA</p>
                 <p class="card__desc">OB Studio</p>
             </div>
         </div>
         <div class="card">
-            <img class="card__artwork" src="img/football.png">
+            <img class="card__artwork" src="img/football.png" alt="football manager logo">
             <div class="card__details">
                 <p class="card__title">Football Manager</p>
                 <p class="card__desc">Nomad</p>
