--- a/card.html
+++ b/card.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="card__desc">
-    <img src="img/bland castles big.png">
+    <img src="img/bland castles big.png" alt="bland castles logo">
     <div class="card__flexright">
         <div class="card__desc-text">
         <p>
